--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,130 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Roboto', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  box-sizing: border-box;
+}
+
+.container {
+  max-width: 600px;
+  width: 90%;
+  min-width: 360px;
+  margin: 100px auto;
+}
+
+.form {
+  position: relative;
+  /* align-items: flex-end; */
+}
+
+.form__search-field {
+  display: flex;
+  justify-content: space-between;
+  box-shadow: 1px 1px 4px black;
+}
+
+.form__input {
+  border: none;
+  padding: 10px 5px;
+  width: 100%;
+  outline: none;
+  font-size: inherit;
+}
+
+.form__snippets {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  left: 0; 
+}
+
+.snippets {
+  box-shadow: 1px 1px 4px black;
+  padding: 10px;
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  max-height: 70vh;
+  overflow-y: auto;
+}
+
+.snippet {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 5px;
+  padding: 5px;
+  border-bottom: 1px rgba(0, 0, 0, 0.171) solid;
+  cursor: pointer;
+}
+
+.snippet:hover {
+  box-shadow: 1px 1px 4px black;
+}
+
+.snippet:last-child {
+  border-bottom: none;
+}
+
+.snippet__image {
+  max-width: 100px;
+  width: 100%;
+}
+
+.snippet__title {
+  flex-basis: 100%;
+}
+
+.btn {
+  border: none;
+  cursor: pointer;
+  padding: 10px 15px;
+  border-radius: 5px;
+  box-shadow: 1px 1px 4px black;
+  font-size: inherit;
+}
+
+.btn-blue {
+  background-color: rgb(0, 132, 255);
+  color: white;
+}
+
+.btn-grey {
+  background-color: rgb(80, 82, 83);
+  color: white;
+}
+
+
+.modal {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(194, 191, 191, 0.356);
+}
+
+.modal__window {
+  box-shadow: 1px 1px 4px black;
+  background-color: #fff;
+  padding: 10px;
+}
+
+.modal__footer {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.book {
+  display: flex;
+  flex-direction: column;
+}
+
+.book__image {
+  max-width: 100%;
 }
